# nmpc_drone

./: README.md  acados_ocp_nlp.json
c_generated_code/: Makefile  acados_sim_solver_Quadrotor_model.c  acados_sim_solver_Quadrotor_model.h  acados_solver.pxd  acados_solver_Quadrotor_model.c  acados_solver_Quadrotor_model.h  main_Quadrotor_model.c  main_sim_Quadrotor_model.c
c_generated_code/Quadrotor_model_model/: Quadrotor_model_expl_ode_fun.c  Quadrotor_model_expl_vde_adj.c  Quadrotor_model_expl_vde_forw.c  Quadrotor_model_model.h
drone_simulator/drone_description/: CMakeLists.txt  package.xml
drone_simulator/drone_description/launch/: display_d435.launch
drone_simulator/drone_description/meshes/prop/: apc_10x4_5_ccw.dae  apc_10x4_5_cw.dae
drone_simulator/drone_description/meshes/sensors/: d435_deprecated.dae
drone_simulator/drone_description/urdf/custom_hexacopter/: custom_hexacopter.xacro  custom_hexacopter_base.xacro  multirotor_base.xacro
drone_simulator/drone_description/urdf/firefly/: firefly.xacro  firefly_base.xacro  multirotor_base.xacro
drone_simulator/drone_description/urdf/sensors/: _d435.gazebo.xacro  _d435.urdf.xacro  d435.xacro  d435_attach.urdf.xacro  d435_deprecated.xacro  px6_mini.xacro  pxhawk_6x_mini.xacro  pxhawk_6x_mini_deprecated.xacro  pxhawk_6x_mini_v2.xacro
drone_simulator/drone_gazebo/: CMakeLists.txt  package.xml
drone_simulator/drone_gazebo/launch/custom_hexacopter/: mav_custom_hexacopter.launch  spawn_mav.launch
drone_simulator/drone_gazebo/launch/firefly/: mav_firefly.launch  spawn_mav.launch
drone_simulator/drone_gazebo/worlds/: drone_world.world
drone_simulator/drone_gazebo_imu_plugin/: CMakeLists.txt  package.xml
drone_simulator/drone_gazebo_imu_plugin/include/drone_gazebo_imu_plugin/: gazebo_ros_imu_plugin.h
drone_simulator/drone_gazebo_imu_plugin/src/: gazebo_ros_imu_plugin.cpp
l1_estimator/: CMakeLists.txt  package.xml
l1_estimator/config/: nominal_model.yaml  simulation_model.yaml
l1_estimator/include/estimator_test/: estimator_test_tools.h  load_param.cpp  load_param.h  plot_tools_for_estimator_test.h  variable_def.h
l1_estimator/include/l1_estimator/: convex_fn.cpp  convex_fn.hpp  disturbance_estimator.cpp  disturbance_estimator.hpp  disturbance_estimator_default.cpp  disturbance_estimator_default.hpp  gamma_proj.cpp  gamma_proj.hpp  l1_estimator.hpp  low_pass_filter.cpp  low_pass_filter.hpp  ref_model.cpp  ref_model.hpp  ros_lpf_node.cpp  ros_lpf_node.hpp  simulation_model.cpp  simulation_model.hpp  tools.cpp  tools.hpp  type_definitions.hpp
l1_estimator/include/noise_generator/: noise_generator.cpp  noise_generator.hpp  noise_publisher.hpp  ros_noise_generator.cpp  ros_noise_generator.hpp
l1_estimator/include/ode_solver/: ode_include.h
l1_estimator/include/simulation_model/: simulation_model.cpp  simulation_model.hpp
l1_estimator/include/yaml_converter/: config_read.cpp  config_read.hpp  read_config.cpp  read_config.hpp  read_config_dir.cpp  read_config_dir.h
l1_estimator/launch/: estimator_test.launch  lpf_test.launch  test_estimator.launch
l1_estimator/msg/: Lpf_test.msg
l1_estimator/scripts/: ros_plot_lpf.py
l1_estimator/src/: estimator_test.cpp  lpf_test_node.cpp  noise_generator_node.cpp  test.cpp  test_estimator.cpp  test_estimator.hpp
nmpc_drone/: CMakeLists.txt  package.xml
nmpc_drone/nmpc/model/: __init__.py  firefly_model.py  hummingbird_model.py
nmpc_drone/nmpc/ocp/: __init__.py  firefly_ocp.py  hummingbird_ocp.py
nmpc_drone/nmpc/utils/: __init__.py  hexa_tool.py  math_tools.py  quad_tool.py
nmpc_drone/nodes/: firefly_nmpc_node.py  hexa_nmpc_node.py  hummingbird_nmpc_node.py
nmpc_quad/: CMakeLists.txt  README.md  package.xml
nmpc_quad/msg/: nmpc_ref.msg
nmpc_quad/nmpc/model/: __init__.py  hummingbird_model.py
nmpc_quad/nmpc/ocp/: hummingbird_ocp.py
nmpc_quad/nodes/: acados_ocp_nlp.json  hummingbird_nmpc_node.py  nmpc_quad_node.py  study_cs.py  test_cs.py
nmpc_quad/nodes/c_generated_code/: Makefile  acados_solver_Quadrotor_model.c  main_sim_Quadrotor_model.c
nmpc_quad/nodes/c_generated_code/Quadrotor_model_model/: Quadrotor_model_expl_ode_fun.c  Quadrotor_model_expl_vde_forw.c
nmpc_quad/nodes/model/: quad_model.py  tools.py
nmpc_quad/nodes/nmpc_pkg/: ocp_solver.py  quad_model.py  tools.py
nmpc_quad/nodes/quad_nmpc_pkg/: ocp_solver.py  tools.py
nmpc_quad/nodes/utils/: utils.py
opt_based_estimator/: CMakeLists.txt  package.xml
opt_based_estimator/include/ode_solver/: custom_rk4_ode.h  ode_solver_include.h
opt_based_estimator/include/opt_based_estimator/: rotational_disturbance_estimator.cpp  rotational_disturbance_estimator.hpp  rotational_dynamics.hpp  rotational_rk4_gradient.cpp  rotational_rk4_gradient.hpp
opt_based_estimator/include/simulation_model/: rotational_dynamics.hpp  rotational_simulation_class.cpp  rotational_simulation_class.hpp
opt_based_estimator/include/tools/: quaternion_math_tools.cpp  quaternion_math_tools.h  tools.h  type_definitions.h
opt_based_estimator/include/utils/: plot_tools.cpp  plot_tools.hpp  quaternion_math_tools.cpp  quaternion_math_tools.h  type_definitions.h
opt_based_estimator/launch/: opt_est_test.launch
opt_based_estimator/src/: test_dist_est.cpp  test_dist_est.h
system_id/: CMakeLists.txt  package.xml
system_id/include/optimization_method/: custom_gauss_newton.hpp  custom_grad_descent.hpp  custom_levenberg_marquardt.hpp  optimization_method.hpp  optimization_node.hpp
system_id/src/: opt_node_test.cpp
