<?xml version="1.0"?>
<package format="2">
  <name>drone_gazebo</name>
  <version>0.0.0</version>
  <description>The drone_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kay@todo.todo">kay</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/drone_gazebo</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->



  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  
</package>
